--- a/prototype/src/styles/variables.scss
+++ b/prototype/src/styles/variables.scss
@@ -7,8 +7,9 @@ $success: #72bb53;
 $info: #5181d4;
 
 /*shadow*/
-$shadow-color: #606060;
-$shadow: 0px 2px 3px 0px $shadow-color;
+$shadow-color: rgba(0, 0, 0, 0.3);
+$shadow-color-light: rgba(0, 0, 0, 0.2);
+$shadow: 0px 0px 10px 0px $shadow-color-light, 0px 5px 10px 0px $shadow-color; // ambient + key
 
 /*font size*/
 $title: 30px;
